infra/k8s/cart-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
        - name: cart-service
          image: ms-ecommerce_cart-service
---
apiVersion: v1
kind: Service
metadata:
  name: backend-srv
spec:
  selector:
    app: cart-service
  ports:
    - name: cart-service
      protocol: TCP
      port: 4000
      targetPort: 4000
