infra/k8s/order-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: ms-ecommerce_order-service
---
apiVersion: v1
kind: Service
metadata:
  name: order-srv
spec:
  selector:
    app: order-service
  ports:
    - name: order-service
      protocol: TCP
      port: 4001
      targetPort: 4001
