infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /basket/list
            pathType: Prefix
            backend:
              service:
                name: backend-srv
                port:
                  number: 4000
          - path: /basket/create
            pathType: Prefix
            backend:
              service:
                name: backend-srv
                port:
                  number: 4000
          - path: /orders/create
            pathType: Prefix
            backend:
              service:
                name: order-srv
                port:
                  number: 4001
          - path: /orders/list
            pathType: Prefix
            backend:
              service:
                name: order-srv
                port:
                  number: 4001
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-srv
                port:
                  number: 3000
